--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 /* section 1 */
 .blog1 {
     display: flex !important;
+    padding: 40px 80px;
 }
 
 .blog1a {
@@ -43,6 +44,7 @@ body {
 
 .blog2 {
     display: flex;
+    padding: 40px 80px;
 }
 
 .abc2 {
@@ -70,6 +72,10 @@ body {
     text-align: left;
 }
 
+.blog2e {
+    padding-left: 50px;
+}
+
 .image2 {
     width: 100%;
 }
@@ -85,6 +91,22 @@ body {
 /* CSS for Contact*/
 .con-2 {
     margin: 0px 350px;
+}
+
+.contacth {
+    text-align: center;
+    font-size: 30px;
+}
+
+.contactp {
+    text-align: center;
+    font-size: 15px;
+}
+
+.forms {
+    margin: 50px 0px;
+    padding: 120px 14px 120px 270px;
+    background-color: tomato;
 }
 
 /* CSS for Footer section*/
