--- a/style.css
+++ b/style.css
@@ -2,6 +2,61 @@ body {
     margin: 0px;
 }
 
+/* for donate section */
+
+.card-con {
+    padding: 0px 380px;
+}
+
+.card-con1 {
+    text-align: center;
+    font-size: 50px;
+    font-weight: 800;
+    line-height: 30px;
+}
+
+.card-con2 {
+    text-align: center;
+    font-size: 20px;
+}
+
+.card {
+    display: flex;
+    margin: 0px 90px;
+    padding: 80px;
+}
+
+.card1 {
+    background-color: #e2e7e9;
+    border-radius: 5px;
+    margin: 0px 10px;
+    padding: 50px 30px;
+}
+
+.card2 {
+    background-color: #f2d1cf;
+    border-radius: 5px;
+    margin: 0px 10px;
+    padding: 50px 30px;
+}
+
+.card3 {
+    background-color: #f1ebbe;
+    border-radius: 5px;
+    margin: 0px 10px;
+    padding: 50px 30px;
+}
+
+
+.cardh {
+    font-size: 25px;
+}
+
+.cardp {
+    font-size: 20px;
+}
+
+
 /* section 1 */
 .blog1 {
     display: flex !important;
@@ -167,6 +222,7 @@ input.input2 {
 .footer-h {
     color: tomato;
     text-align: center;
+    font-size: 30px;
 
 
 }
