--- a/style.css
+++ b/style.css
@@ -2,6 +2,53 @@ body {
     margin: 0px;
 }
 
+/* for donate today section */
+.donate {
+    display: flex;
+    margin: 0px 360px;
+}
+
+.donate1 {
+    width: 100%;
+    text-align: center;
+    background-color: #f3f3f3;
+    margin: 10px;
+    border-radius: 5px;
+    font-size: 25px;
+    color: #746d6d;
+}
+
+.donate2 {
+    width: 100%;
+    text-align: center;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: #fb440047;
+    margin: 10px;
+    border-radius: 5px;
+    border: 3px solid #ff4500;
+    font-size: 25px;
+    color: #000000;
+}
+
+.donet-form {
+    margin: 0px 360px;
+}
+
+.form1 {}
+
+.input22 {
+    padding: 25px;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #bcb8b8;
+    border: 2px solid;
+    border-width: 0px 0px 2px 0px;
+}
+
+.input222 {}
+
 /* for donate section */
 
 .card-con {
